feat: add repeat params to cv + improve notebooks

--- a/notebooks/run_experiments_demo.ipynb
+++ b/notebooks/run_experiments_demo.ipynb
@@ -439,7 +439,9 @@
    "id": "e6156a8a-6812-49e7-9c22-3d8df99853b0",
    "metadata": {},
    "source": [
-    "## Read results and showing results"
+    "## Reading and showing results\n",
+    "\n",
+    "-> The table in the ouput show the mean and std score, for each metrics, across the dataset questions. So it show the variability overs the dataset questios for one run, not the \"natural\" variability of the model (random variation across multiple generations). "
    ]
   },
   {
