--- a/notebooks/run_grid_raglimit_demo.ipynb
+++ b/notebooks/run_grid_raglimit_demo.ipynb
@@ -57,7 +57,7 @@
    "id": "d9ffe4f9-9dda-429d-a8ea-1b783abfc505",
    "metadata": {},
    "source": [
-    "## Designing an experiment set\n"
+    "## Designing and running an experiment set\n"
    ]
   },
   {
@@ -76,11 +76,12 @@
    ],
    "source": [
     "# Designing my experiments\n",
+    "# --\n",
     "expset_name = \"fs_rag_limit\"\n",
     "expset_readme = \"Comparing the impact of the `limit` parameters on a RAG model.\"\n",
-    "metrics = [\"answer_relevancy\", \"judge_exactness\", \"judge_notator\",  \"output_length\", \"generation_time\"]\n",
+    "metrics = [\"answer_relevancy\", \"judge_exactness\", \"judge_notator\", \"output_length\", \"generation_time\"]\n",
     "common_params = {\n",
-    "    \"dataset\" : \"MFS_questions_v01_head\",\n",
+    "    \"dataset\" : \"MFS_questions_v01\",\n",
     "    \"model\" : {\"name\": \"AgentPublic/llama3-instruct-8b\", \"base_url\": MFS_API_URL, \"api_key\": MFS_API_KEY},\n",
     "    \"sampling_params\" : {\"temperature\": 0.2},\n",
     "    \"metrics\" : metrics\n",
@@ -109,7 +110,7 @@
    "id": "e6156a8a-6812-49e7-9c22-3d8df99853b0",
    "metadata": {},
    "source": [
-    "## Read results and showing results"
+    "## Reading and showing results"
    ]
   },
   {
@@ -232,13 +233,15 @@
    "source": [
     "# Read results\n",
     "# --\n",
-    "df_all = [] # list of results per experiment/model\n",
-    "supports = [] # Store the support for debugging: if some answer/observation failed, the support can be less than the dataset size\n",
+    "df_all = None # multi-dimensional DataFrame\n",
+    "arr_all = [] # keep references of source array per metric metrics \n",
     "\n",
+    "# Fetch results and compute macro metrics (mean, std etc).\n",
+    "# --\n",
     "response = requests.get(f'{API_URL}/v1/experimentset/{expset_id}')\n",
     "expset = response.json()\n",
-    "\n",
-    "for exp in expset[\"experiments\"]:\n",
+    "rows = []\n",
+    "for i, exp in enumerate(expset[\"experiments\"]):\n",
     "    # Get an experiment result\n",
     "    exp_id = exp[\"id\"]\n",
     "    response = requests.get(f'{API_URL}/v1/experiment/{exp_id}?with_results=true')\n",
@@ -247,76 +250,44 @@
     "    if experiment[\"experiment_status\"] != \"finished\":\n",
     "        print(f\"Warning: experiment {exp_id} is not finished yet...\")\n",
     "    results = experiment[\"results\"]\n",
+    "    model = experiment[\"model\"][\"name\"] + \"_limit\" + experiment[\"model\"][\"extra_params\"][\"rag\"][\"limit\"]\n",
     "    \n",
-    "    # Build a result dataframe  from the observation_table (mean, std etc)\n",
-    "    df_metrics = {}\n",
-    "    metric_support = []\n",
-    "    supports.append(metric_support)\n",
+    "    #Add an observation row from the observation_table (mean, std etc)\n",
+    "    row = {\"model\": model}\n",
+    "    rows.append(row)\n",
+    "    metric_arrs = {}\n",
+    "    arr_all.append(metric_arrs)\n",
     "    for metric_results in results: \n",
-    "        metric_name = metric_results[\"metric_name\"]\n",
+    "        metric = metric_results[\"metric_name\"]\n",
     "        arr = np.array([x[\"score\"] for x in metric_results[\"observation_table\"] if pd.notna(x[\"score\"])])\n",
-    "        df = pd.DataFrame([[\n",
-    "                np.mean(arr), # mean\n",
-    "                np.std(arr), # std\n",
-    "                np.median(arr), # median\n",
-    "                f\"{arr.mean():.2f} ± {arr.std():.2f}\",  # Formatting as 'mean±std'\n",
-    "                len(arr), # support\n",
-    "            ]], columns=[\"mean\", \"std\", \"median\", \"mean_std\", \"support\"])\n",
-    "        df_metrics[metric_name] = df\n",
-    "        metric_support.append(len(arr))\n",
+    "        row[(metric, 'mean')] = np.mean(arr)\n",
+    "        row[(metric, 'std')] = np.std(arr)\n",
+    "        row[(metric, 'median')] = np.median(arr)\n",
+    "        row[(metric, 'mean_std')] = f\"{arr.mean():.2f} ± {arr.std():.2f}\"  # Formatting as 'mean±std'\n",
+    "        row[(metric, 'support')] = len(arr)\n",
+    "        metric_arrs[metric] = arr\n",
     "    \n",
-    "    # Stack the mean_std final measure\n",
-    "    limit = exp[\"model\"][\"extra_params\"][\"limit\"]\n",
-    "    name = f\"mfs-rag-baseline_limit{limit}\" \n",
-    "    df = pd.DataFrame({metric_name:df[\"mean_std\"].iloc[0] for metric_name, df in sorted(df_metrics.items())}, index=[name])\n",
-    "    df_all.append(df)\n",
-    "\n",
-    "final_df = pd.concat(df_all)\n",
+    "df_all = pd.DataFrame(rows)\n",
+    "df_all.set_index('model', inplace=True)\n",
+    "df_all.columns = pd.MultiIndex.from_tuples(df_all.columns)\n",
+    "final_df = df_all.xs('mean', axis=1, level=1)\n",
     "#final_df[\"support\"] = supports # for debugging\n",
-    "# Reorder columns\n",
-    "final_df = final_df[metrics]\n",
-    "final_df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b688dcf6-2e78-48dd-85db-197bd4b767a6",
-   "metadata": {},
-   "source": [
-    "## What is inside an experiment result ?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "id": "6c3b601d-8340-49cc-aec5-fff803fb946c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'id': 1276,\n",
-       " 'created_at': '2024-11-09T12:57:32.560445',\n",
-       " 'score': 1.0,\n",
-       " 'observation': 'The score is 1.00 because the response perfectly addresses the question without any irrelevant information. Great job!',\n",
-       " 'num_line': 21,\n",
-       " 'error_msg': None,\n",
-       " 'execution_time': 4}"
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# See what's inside an experiment result\n",
+    "\n",
+    "# Group and average the result of the experiments by models\n",
     "# --\n",
-    "metric_index = 2\n",
-    "len(results) # number of metrics\n",
-    "list(results[metric_index]) # the keys of the dict representing the result object\n",
-    "len(results[metric_index][\"observation_table\"]) # number of observation -> one per dataset line.\n",
-    "results[metric_index][\"observation_table\"][0] # the actual \"observation\" for one metric, for one line in the dataset."
+    "def format_metrics(row):\n",
+    "   metrics = {}\n",
+    "   for metric in final_df.columns.levels[0]:\n",
+    "       mean_value = row[(metric, 'mean')]\n",
+    "       std_value = row[(metric, 'std')]\n",
+    "       metrics[metric] = f\"{mean_value:.2f} ± {std_value:.2f}\"\n",
+    "   return pd.Series(metrics)\n",
+    "final_df = final_df.groupby(level=0).agg(['mean', 'std'])  # groupby \"model\"\n",
+    "final_df.index.name = None\n",
+    "final_df = final_df.apply(format_metrics, axis=1) # final formating\n",
+    "final_df = final_df.reindex([m[\"name\"] for m in grid_params[\"model\"]]) # reorder rows\n",
+    "final_df = final_df[metrics] # reorder columns\n",
+    "final_df"
    ]
   }
  ],
