feat: add demo frontend

--- a/notebooks/run_experiments_demo.ipynb
+++ b/notebooks/run_experiments_demo.ipynb
@@ -340,7 +340,7 @@
    "source": [
     "## Lauching a couple of experiments\n",
     "\n",
-    "Here we lauched the experiment independantly with the `/experiment` route. We will see on another notebook how to launch grouped experiments in a grid search fashion by using the route `/experimentset`."
+    "Here we lauched the experiment independantly with the `/experiment` route. We will see on another notebook how to launch grouped experiments in a grid search fashion by using the route `/experiment_set`."
    ]
   },
   {
