--- a/notebooks/run_grid_raglimit_demo.ipynb
+++ b/notebooks/run_grid_raglimit_demo.ipynb
@@ -12,9 +12,9 @@
     "An experiment set is a collection of experiments that are part of the same evaluation scenario. \n",
     "In this notebook, we're comparing how the (maximum) number of chunks influences the model's performance.\n",
     "\n",
-    "To conduct these experiments, one approach consists by creating an empty experiment set (via POST /experimentset) and then add a list of experiments to it (via POST /experiment with the reference to the experimentset_id). Each experiment should have all parameters the same, except for the (maximum) number of chunks.\n",
+    "To conduct these experiments, one approach consists by creating an empty experiment set (via POST /experiment_set) and then add a list of experiments to it (via POST /experiment with the reference to the experimentset_id). Each experiment should have all parameters the same, except for the (maximum) number of chunks.\n",
     "\n",
-    "Alternatively, the /experimentset endpoint offers a convenient feature called cv (short for cross-validation). This feature includes two key parameters:\n",
+    "Alternatively, the /experiment_set endpoint offers a convenient feature called cv (short for cross-validation). This feature includes two key parameters:\n",
     "\n",
     "- **common_params**: These are the parameters that will be shared across all experiments in the set.\n",
     "- **grid_params**: This allows you to specify a list of varying values for any parameter.\n",
@@ -96,7 +96,7 @@
     "    \"readme\": expset_readme,\n",
     "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params}\n",
     "}\n",
-    "response = requests.post(f'{API_URL}/v1/experimentset', json=expset)\n",
+    "response = requests.post(f'{API_URL}/v1/experiment_set', json=expset)\n",
     "resp = response.json()\n",
     "if \"id\" in resp:\n",
     "    expset_id = resp[\"id\"]\n",
@@ -238,7 +238,7 @@
     "\n",
     "# Fetch results and compute macro metrics (mean, std etc).\n",
     "# --\n",
-    "response = requests.get(f'{API_URL}/v1/experimentset/{expset_id}')\n",
+    "response = requests.get(f'{API_URL}/v1/experiment_set/{expset_id}')\n",
     "expset = response.json()\n",
     "rows = []\n",
     "for i, exp in enumerate(expset[\"experiments\"]):\n",
