feat: notebook grid sear demo + patch route ok

--- a/notebooks/run_experiments_demo.ipynb
+++ b/notebooks/run_experiments_demo.ipynb
@@ -423,8 +423,8 @@
     "# -> In this exemple we add the generatime_metric to list of computed metric (generation time is kept in memory at inference time)\n",
     "for exp_id in experiment_ids:\n",
     "    experiment = {\n",
-    "    \"metrics\": [\"generation_time\"],\n",
-    "    \"skip_answers_generation\": True,\n",
+    "        \"metrics\": [\"generation_time\"],\n",
+    "        \"rerun_answers\": False,\n",
     "    }\n",
     "    response = requests.patch(f'{API_URL}/v1/experiment/{exp_id}', json=experiment)\n",
     "    resp = response.json()\n",
