--- a/notebooks/run_grid_raglimit_demo.ipynb
+++ b/notebooks/run_grid_raglimit_demo.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 13,
    "id": "fb6038d3-def4-4fc4-8ae2-4327af3e919f",
    "metadata": {},
    "outputs": [],
@@ -48,8 +48,32 @@
     "API_URL = \"http://localhost:8000\"\n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
-    "MFS_API_URL = \"https://franceservices.staging.etalab.gouv.fr/api/v1\"\n",
-    "MFS_API_KEY = os.getenv(\"MFS_API_KEY\")"
+    "MFS_API_URL = \"https://franceservices.dev.etalab.gouv.fr/api/v1\"\n",
+    "\n",
+    "# Various utility functions\n",
+    "# --\n",
+    "def format_metrics(row):\n",
+    "   # format a dataframe has a series of \"mean ± std\"\n",
+    "   metrics = {}\n",
+    "   for metric in final_df.columns.levels[0]:\n",
+    "       mean_value = row[(metric, 'mean')]\n",
+    "       std_value = row[(metric, 'std')]\n",
+    "       metrics[metric] = f\"{mean_value:.2f} ± {std_value:.2f}\"\n",
+    "   return pd.Series(metrics)\n",
+    "    \n",
+    "def highlight_cells(s):\n",
+    " # Custom function to highlight the entry with the highest/lowest mean value\n",
+    "    means = s.apply(lambda x: float(str(x).split('±')[0].strip()))\n",
+    "    # Create a mask where 1 for max, 0 for min\n",
+    "    max_mean_index = means.idxmax()\n",
+    "    min_mean_index = means.idxmin()  \n",
+    "    mask = pd.Series({max_mean_index: 1, min_mean_index: 0}, index=s.index)\n",
+    "    return [\n",
+    "        'font-weight: bold; color: salmon' if mask_value == 0 else\n",
+    "        'font-weight: bold; color: green' if mask_value == 1 else\n",
+    "        ''\n",
+    "        for mask_value in mask\n",
+    "    ]"
    ]
   },
   {
@@ -62,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 7,
    "id": "1b60dd8b-e7b5-4a08-86c7-1025c5b80f18",
    "metadata": {},
    "outputs": [
@@ -70,19 +94,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created expset: fs_rag_limit (5)\n"
+      "Created expset: fs_rag_limit_v2 (12)\n"
      ]
     }
    ],
    "source": [
     "# Designing my experiments\n",
     "# --\n",
-    "expset_name = \"fs_rag_limit\"\n",
+    "expset_name = \"fs_rag_limit_v2\"\n",
     "expset_readme = \"Comparing the impact of the `limit` parameters on a RAG model.\"\n",
     "metrics = [\"answer_relevancy\", \"judge_exactness\", \"judge_notator\", \"output_length\", \"generation_time\"]\n",
     "common_params = {\n",
     "    \"dataset\" : \"MFS_questions_v01\",\n",
-    "    \"model\" : {\"name\": \"AgentPublic/llama3-instruct-8b\", \"base_url\": MFS_API_URL, \"api_key\": MFS_API_KEY},\n",
+    "    \"model\" : {\"name\": \"AgentPublic/llama3-instruct-8b\", \"base_url\": MFS_API_URL, \"api_key\": ALBERT_API_KEY},\n",
     "    \"sampling_params\" : {\"temperature\": 0.2},\n",
     "    \"metrics\" : metrics\n",
     "}\n",
@@ -115,117 +139,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 16,
    "id": "177816f4-1105-497d-a14b-7178850d36f4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
+       "<style type=\"text/css\">\n",
+       "#T_d3929_row0_col0, #T_d3929_row0_col1, #T_d3929_row2_col2, #T_d3929_row3_col3, #T_d3929_row3_col4 {\n",
+       "  font-weight: bold;\n",
+       "  color: green;\n",
+       "}\n",
+       "#T_d3929_row6_col1, #T_d3929_row7_col0, #T_d3929_row7_col2, #T_d3929_row7_col3, #T_d3929_row7_col4 {\n",
+       "  font-weight: bold;\n",
+       "  color: salmon;\n",
+       "}\n",
        "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
+       "<table id=\"T_d3929\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>answer_relevancy</th>\n",
-       "      <th>judge_completude</th>\n",
-       "      <th>judge_exactness</th>\n",
-       "      <th>judge_notator</th>\n",
-       "      <th>output_length</th>\n",
-       "      <th>generation_time</th>\n",
-       "      <th>toxicity</th>\n",
-       "      <th>bias</th>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th id=\"T_d3929_level0_col0\" class=\"col_heading level0 col0\" >answer_relevancy</th>\n",
+       "      <th id=\"T_d3929_level0_col1\" class=\"col_heading level0 col1\" >judge_exactness</th>\n",
+       "      <th id=\"T_d3929_level0_col2\" class=\"col_heading level0 col2\" >judge_notator</th>\n",
+       "      <th id=\"T_d3929_level0_col3\" class=\"col_heading level0 col3\" >output_length</th>\n",
+       "      <th id=\"T_d3929_level0_col4\" class=\"col_heading level0 col4\" >generation_time</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th class=\"index_name level0\" >model</th>\n",
+       "      <th class=\"blank col0\" >&nbsp;</th>\n",
+       "      <th class=\"blank col1\" >&nbsp;</th>\n",
+       "      <th class=\"blank col2\" >&nbsp;</th>\n",
+       "      <th class=\"blank col3\" >&nbsp;</th>\n",
+       "      <th class=\"blank col4\" >&nbsp;</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>AgentPublic/llama3-instruct-8b</th>\n",
-       "      <td>0.90 ± 0.23</td>\n",
-       "      <td>26.41 ± 22.27</td>\n",
-       "      <td>0.03 ± 0.16</td>\n",
-       "      <td>3.41 ± 1.97</td>\n",
-       "      <td>308.33 ± 93.23</td>\n",
-       "      <td>6.64 ± 1.99</td>\n",
-       "      <td>0.00 ± 0.00</td>\n",
-       "      <td>0.00 ± 0.00</td>\n",
+       "      <th id=\"T_d3929_level0_row0\" class=\"row_heading level0 row0\" >AgentPublic/llama3-instruct-8b_limit5</th>\n",
+       "      <td id=\"T_d3929_row0_col0\" class=\"data row0 col0\" >0.928468</td>\n",
+       "      <td id=\"T_d3929_row0_col1\" class=\"data row0 col1\" >0.153846</td>\n",
+       "      <td id=\"T_d3929_row0_col2\" class=\"data row0 col2\" >4.846154</td>\n",
+       "      <td id=\"T_d3929_row0_col3\" class=\"data row0 col3\" >120.615385</td>\n",
+       "      <td id=\"T_d3929_row0_col4\" class=\"data row0 col4\" >4.538462</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>meta-llama/Meta-Llama-3.1-8B-Instruct</th>\n",
-       "      <td>0.95 ± 0.15</td>\n",
-       "      <td>30.00 ± 20.16</td>\n",
-       "      <td>0.05 ± 0.22</td>\n",
-       "      <td>3.97 ± 2.27</td>\n",
-       "      <td>296.13 ± 113.57</td>\n",
-       "      <td>3.82 ± 1.43</td>\n",
-       "      <td>0.00 ± 0.00</td>\n",
-       "      <td>0.00 ± 0.00</td>\n",
+       "      <th id=\"T_d3929_level0_row1\" class=\"row_heading level0 row1\" >AgentPublic/llama3-instruct-8b_limit4</th>\n",
+       "      <td id=\"T_d3929_row1_col0\" class=\"data row1 col0\" >0.884116</td>\n",
+       "      <td id=\"T_d3929_row1_col1\" class=\"data row1 col1\" >0.128205</td>\n",
+       "      <td id=\"T_d3929_row1_col2\" class=\"data row1 col2\" >5.256410</td>\n",
+       "      <td id=\"T_d3929_row1_col3\" class=\"data row1 col3\" >117.487179</td>\n",
+       "      <td id=\"T_d3929_row1_col4\" class=\"data row1 col4\" >4.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>meta-llama/Meta-Llama-3.1-70B-Instruct</th>\n",
-       "      <td>0.92 ± 0.22</td>\n",
-       "      <td>35.00 ± 24.73</td>\n",
-       "      <td>0.05 ± 0.22</td>\n",
-       "      <td>4.85 ± 2.63</td>\n",
-       "      <td>261.89 ± 109.02</td>\n",
-       "      <td>9.42 ± 4.01</td>\n",
-       "      <td>0.00 ± 0.00</td>\n",
-       "      <td>0.00 ± 0.00</td>\n",
+       "      <th id=\"T_d3929_level0_row2\" class=\"row_heading level0 row2\" >AgentPublic/llama3-instruct-8b_limit10</th>\n",
+       "      <td id=\"T_d3929_row2_col0\" class=\"data row2 col0\" >0.916034</td>\n",
+       "      <td id=\"T_d3929_row2_col1\" class=\"data row2 col1\" >0.128205</td>\n",
+       "      <td id=\"T_d3929_row2_col2\" class=\"data row2 col2\" >5.589744</td>\n",
+       "      <td id=\"T_d3929_row2_col3\" class=\"data row2 col3\" >125.000000</td>\n",
+       "      <td id=\"T_d3929_row2_col4\" class=\"data row2 col4\" >5.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>mfs-rag-baseline</th>\n",
-       "      <td>0.90 ± 0.18</td>\n",
-       "      <td>42.05 ± 26.91</td>\n",
-       "      <td>0.21 ± 0.40</td>\n",
-       "      <td>5.36 ± 2.59</td>\n",
-       "      <td>119.41 ± 66.23</td>\n",
-       "      <td>4.31 ± 1.80</td>\n",
-       "      <td>0.00 ± 0.00</td>\n",
-       "      <td>0.00 ± 0.00</td>\n",
+       "      <th id=\"T_d3929_level0_row3\" class=\"row_heading level0 row3\" >AgentPublic/llama3-instruct-8b_limit20</th>\n",
+       "      <td id=\"T_d3929_row3_col0\" class=\"data row3 col0\" >0.915436</td>\n",
+       "      <td id=\"T_d3929_row3_col1\" class=\"data row3 col1\" >0.128205</td>\n",
+       "      <td id=\"T_d3929_row3_col2\" class=\"data row3 col2\" >5.487179</td>\n",
+       "      <td id=\"T_d3929_row3_col3\" class=\"data row3 col3\" >135.589744</td>\n",
+       "      <td id=\"T_d3929_row3_col4\" class=\"data row3 col4\" >5.512821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_d3929_level0_row4\" class=\"row_heading level0 row4\" >AgentPublic/llama3-instruct-8b_limit7</th>\n",
+       "      <td id=\"T_d3929_row4_col0\" class=\"data row4 col0\" >0.802585</td>\n",
+       "      <td id=\"T_d3929_row4_col1\" class=\"data row4 col1\" >0.102564</td>\n",
+       "      <td id=\"T_d3929_row4_col2\" class=\"data row4 col2\" >5.205128</td>\n",
+       "      <td id=\"T_d3929_row4_col3\" class=\"data row4 col3\" >122.974359</td>\n",
+       "      <td id=\"T_d3929_row4_col4\" class=\"data row4 col4\" >4.641026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_d3929_level0_row5\" class=\"row_heading level0 row5\" >AgentPublic/llama3-instruct-8b_limit15</th>\n",
+       "      <td id=\"T_d3929_row5_col0\" class=\"data row5 col0\" >0.876101</td>\n",
+       "      <td id=\"T_d3929_row5_col1\" class=\"data row5 col1\" >0.102564</td>\n",
+       "      <td id=\"T_d3929_row5_col2\" class=\"data row5 col2\" >5.153846</td>\n",
+       "      <td id=\"T_d3929_row5_col3\" class=\"data row5 col3\" >121.487179</td>\n",
+       "      <td id=\"T_d3929_row5_col4\" class=\"data row5 col4\" >5.230769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_d3929_level0_row6\" class=\"row_heading level0 row6\" >AgentPublic/llama3-instruct-8b_limit2</th>\n",
+       "      <td id=\"T_d3929_row6_col0\" class=\"data row6 col0\" >0.871865</td>\n",
+       "      <td id=\"T_d3929_row6_col1\" class=\"data row6 col1\" >0.076923</td>\n",
+       "      <td id=\"T_d3929_row6_col2\" class=\"data row6 col2\" >4.846154</td>\n",
+       "      <td id=\"T_d3929_row6_col3\" class=\"data row6 col3\" >97.717949</td>\n",
+       "      <td id=\"T_d3929_row6_col4\" class=\"data row6 col4\" >3.538462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_d3929_level0_row7\" class=\"row_heading level0 row7\" >AgentPublic/llama3-instruct-8b_limit1</th>\n",
+       "      <td id=\"T_d3929_row7_col0\" class=\"data row7 col0\" >0.781959</td>\n",
+       "      <td id=\"T_d3929_row7_col1\" class=\"data row7 col1\" >0.076923</td>\n",
+       "      <td id=\"T_d3929_row7_col2\" class=\"data row7 col2\" >3.410256</td>\n",
+       "      <td id=\"T_d3929_row7_col3\" class=\"data row7 col3\" >86.384615</td>\n",
+       "      <td id=\"T_d3929_row7_col4\" class=\"data row7 col4\" >3.128205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_d3929_level0_row8\" class=\"row_heading level0 row8\" >AgentPublic/llama3-instruct-8b_limit3</th>\n",
+       "      <td id=\"T_d3929_row8_col0\" class=\"data row8 col0\" >0.860713</td>\n",
+       "      <td id=\"T_d3929_row8_col1\" class=\"data row8 col1\" >0.076923</td>\n",
+       "      <td id=\"T_d3929_row8_col2\" class=\"data row8 col2\" >4.717949</td>\n",
+       "      <td id=\"T_d3929_row8_col3\" class=\"data row8 col3\" >107.410256</td>\n",
+       "      <td id=\"T_d3929_row8_col4\" class=\"data row8 col4\" >3.948718</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
-       "</table>\n",
-       "</div>"
+       "</table>\n"
       ],
       "text/plain": [
-       "                                       answer_relevancy judge_completude  \\\n",
-       "AgentPublic/llama3-instruct-8b              0.90 ± 0.23    26.41 ± 22.27   \n",
-       "meta-llama/Meta-Llama-3.1-8B-Instruct       0.95 ± 0.15    30.00 ± 20.16   \n",
-       "meta-llama/Meta-Llama-3.1-70B-Instruct      0.92 ± 0.22    35.00 ± 24.73   \n",
-       "mfs-rag-baseline                            0.90 ± 0.18    42.05 ± 26.91   \n",
-       "\n",
-       "                                       judge_exactness judge_notator  \\\n",
-       "AgentPublic/llama3-instruct-8b             0.03 ± 0.16   3.41 ± 1.97   \n",
-       "meta-llama/Meta-Llama-3.1-8B-Instruct      0.05 ± 0.22   3.97 ± 2.27   \n",
-       "meta-llama/Meta-Llama-3.1-70B-Instruct     0.05 ± 0.22   4.85 ± 2.63   \n",
-       "mfs-rag-baseline                           0.21 ± 0.40   5.36 ± 2.59   \n",
-       "\n",
-       "                                          output_length generation_time  \\\n",
-       "AgentPublic/llama3-instruct-8b           308.33 ± 93.23     6.64 ± 1.99   \n",
-       "meta-llama/Meta-Llama-3.1-8B-Instruct   296.13 ± 113.57     3.82 ± 1.43   \n",
-       "meta-llama/Meta-Llama-3.1-70B-Instruct  261.89 ± 109.02     9.42 ± 4.01   \n",
-       "mfs-rag-baseline                         119.41 ± 66.23     4.31 ± 1.80   \n",
-       "\n",
-       "                                           toxicity         bias  \n",
-       "AgentPublic/llama3-instruct-8b          0.00 ± 0.00  0.00 ± 0.00  \n",
-       "meta-llama/Meta-Llama-3.1-8B-Instruct   0.00 ± 0.00  0.00 ± 0.00  \n",
-       "meta-llama/Meta-Llama-3.1-70B-Instruct  0.00 ± 0.00  0.00 ± 0.00  \n",
-       "mfs-rag-baseline                        0.00 ± 0.00  0.00 ± 0.00  "
+       "<pandas.io.formats.style.Styler at 0x7f35fddfe870>"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +264,7 @@
     "# Read results\n",
     "# --\n",
     "df_all = None # multi-dimensional DataFrame\n",
-    "arr_all = [] # keep references of source array per metric metrics \n",
+    "arr_all = {} # keep references of source array per metric metrics \n",
     "\n",
     "# Fetch results and compute macro metrics (mean, std etc).\n",
     "# --\n",
@@ -250,13 +280,13 @@
     "    if experiment[\"experiment_status\"] != \"finished\":\n",
     "        print(f\"Warning: experiment {exp_id} is not finished yet...\")\n",
     "    results = experiment[\"results\"]\n",
-    "    model = experiment[\"model\"][\"name\"] + \"_limit\" + experiment[\"model\"][\"extra_params\"][\"rag\"][\"limit\"]\n",
+    "    model = experiment[\"model\"][\"name\"] + \"_limit\" + str(experiment[\"model\"][\"extra_params\"][\"rag\"][\"limit\"])\n",
     "    \n",
-    "    #Add an observation row from the observation_table (mean, std etc)\n",
+    "    # Add an observation row from the observation_table (mean, std etc)\n",
     "    row = {\"model\": model}\n",
     "    rows.append(row)\n",
     "    metric_arrs = {}\n",
-    "    arr_all.append(metric_arrs)\n",
+    "    arr_all[model] = metric_arrs\n",
     "    for metric_results in results: \n",
     "        metric = metric_results[\"metric_name\"]\n",
     "        arr = np.array([x[\"score\"] for x in metric_results[\"observation_table\"] if pd.notna(x[\"score\"])])\n",
@@ -273,20 +303,9 @@
     "final_df = df_all.xs('mean', axis=1, level=1)\n",
     "#final_df[\"support\"] = supports # for debugging\n",
     "\n",
-    "# Group and average the result of the experiments by models\n",
-    "# --\n",
-    "def format_metrics(row):\n",
-    "   metrics = {}\n",
-    "   for metric in final_df.columns.levels[0]:\n",
-    "       mean_value = row[(metric, 'mean')]\n",
-    "       std_value = row[(metric, 'std')]\n",
-    "       metrics[metric] = f\"{mean_value:.2f} ± {std_value:.2f}\"\n",
-    "   return pd.Series(metrics)\n",
-    "final_df = final_df.groupby(level=0).agg(['mean', 'std'])  # groupby \"model\"\n",
-    "final_df.index.name = None\n",
-    "final_df = final_df.apply(format_metrics, axis=1) # final formating\n",
-    "final_df = final_df.reindex([m[\"name\"] for m in grid_params[\"model\"]]) # reorder rows\n",
+    "final_df = final_df.sort_values(by='judge_exactness', ascending=False)\n",
     "final_df = final_df[metrics] # reorder columns\n",
+    "final_df = final_df.style.apply(highlight_cells, axis=0)\n",
     "final_df"
    ]
   }
