feat: Integrate  multiple RAG metrics for deepeval

--- a/notebooks/run_experiments_demo.ipynb
+++ b/notebooks/run_experiments_demo.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 5,
    "id": "fb6038d3-def4-4fc4-8ae2-4327af3e919f",
    "metadata": {},
    "outputs": [],
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 7,
    "id": "7e461411-899a-4cec-a14d-4ad419b30c9d",
    "metadata": {},
    "outputs": [
@@ -240,6 +240,12 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <td>judge_complexity</td>\n",
+       "      <td>[0-10] score complexity of query, thematic...</td>\n",
+       "      <td>dataset</td>\n",
+       "      <td>[query]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <td>answer_relevancy</td>\n",
        "      <td>see https://docs.confident-ai.com/docs/metrics-introduction</td>\n",
        "      <td>deepeval</td>\n",
@@ -252,10 +258,40 @@
        "      <td>[output, query]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <td>contextual_precision</td>\n",
+       "      <td>see https://docs.confident-ai.com/docs/metrics-introduction</td>\n",
+       "      <td>deepeval</td>\n",
+       "      <td>[output, output_true, query, retrieval_context]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>contextual_recall</td>\n",
+       "      <td>see https://docs.confident-ai.com/docs/metrics-introduction</td>\n",
+       "      <td>deepeval</td>\n",
+       "      <td>[output, output_true, query, retrieval_context]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>contextual_relevancy</td>\n",
+       "      <td>see https://docs.confident-ai.com/docs/metrics-introduction</td>\n",
+       "      <td>deepeval</td>\n",
+       "      <td>[output, query, retrieval_context]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <td>faithfulness</td>\n",
        "      <td>see https://docs.confident-ai.com/docs/metrics-introduction</td>\n",
        "      <td>deepeval</td>\n",
        "      <td>[output, query, retrieval_context]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>hallucination</td>\n",
+       "      <td>see https://docs.confident-ai.com/docs/metrics-introduction</td>\n",
+       "      <td>deepeval</td>\n",
+       "      <td>[context, output, query]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>ragas</td>\n",
+       "      <td>see https://docs.confident-ai.com/docs/metrics-introduction</td>\n",
+       "      <td>deepeval</td>\n",
+       "      <td>[output_true, query, retrieval_context]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>toxicity</td>\n",
@@ -318,7 +354,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
